# cpp-interfaces

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_issue.md  development_issue.md
.github/workflows/: build.yml  clang-format.yml  cppcheck.yml
include/: CMakeLists.txt
logging-interface/: meson.build
logging-interface/include/: main.hpp
logging-interface/src/: main.cpp
logging-interface/subprojects/: .gitignore
logging-interface/tests/: meson.build
logging-interface/tests/src/: main.cpp  test.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
